# HasiLWGDF

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
cmake/: HasiLWGDF.cmake  HasiLWGDF_RC.cmake
include/: HasiLWGDF_Core.h
include/hasilwgdf/: Config.hpp  Core.h  Core.hpp  Discord.hpp  Game.hpp  Group.hpp  Item.hpp  Module.hpp  Resource.hpp
include/hasilwgdf/components/: AudioListener.h  AudioPlayer.h  Component.h
include/hasilwgdf/game/: Config.h  DiscordRPC.h  GameManager.h  InputManager.h  Item.h  Scene.h
include/hasilwgdf/graphics/: Backend.hpp
include/hasilwgdf/input/: Joystick.hpp  Keyboard.hpp  Mouse.hpp  Touch.hpp
include/hasilwgdf/math/: Quaternion.h  Quaternion.hpp  Transform.h  Transform.hpp  Vector2.h  Vector2.hpp  Vector3.h  Vector3.hpp
include/hasilwgdf/modules/: AudioListener.hpp  AudioPlayer.hpp  Body.hpp  Camera.hpp  Joint.hpp  Mesh.hpp
include/hasilwgdf/render/: GraphicsAPI.h
include/hasilwgdf/resources/: Resource.h
include/hasilwgdf/utils/: COM.h  COM.hpp  Export.h  Export.hpp  Holder.hpp  Implementer.hpp  JSON.hpp  Logger.h  Logger.hpp
src/cpp/: Audio.cpp  Discord.cpp  DiscordUnix.cpp  DiscordWin32.cpp  Game.cpp  PhysicsWorld2D.cpp  PhysicsWorld3D.cpp
src/cpp/game/: AudioManager.cpp  DiscordRPC.cpp  GameManager.cpp  InputManager.cpp
src/cpp/graphics/: DX9Renderer.cpp  OGLESRenderer.cpp  OGLRenderer.cpp  Renderer.cpp
src/cpp/input/: Joystick.cpp  Keyboard.cpp  Mouse.cpp  Touch.cpp
src/cpp/math/: Timer.cpp
src/cpp/physics/: PhysicsEngine2D.cpp  PhysicsEngine3D.cpp
src/cpp/render/: DX11Renderer.cpp  DX12Renderer.cpp  DX9Renderer.cpp  MTLRenderer.mm  OGLESRenderer.cpp  OGLRenderer.cpp  Renderer.cpp  VKRenderer.cpp
src/hpp/: Audio.hpp  Discord.hpp  Game.hpp  PhysicsWorld.hpp
src/hpp/game/: AudioManager.hpp  GameManager.hpp  InputManager.hpp
src/hpp/graphics/: Renderer.hpp
src/hpp/input/: Joystick.hpp  Keyboard.hpp  Mouse.hpp  Touch.hpp
src/hpp/math/: Timer.hpp
src/hpp/physics/: PhysicsEngine.hpp
src/hpp/render/: Renderer.hpp
src/main/cpp/io/hasibix/hasilwgdf/core/: HasiLWGDF_Core.cpp  Renderer.cpp  Renderer.h  Renderer.mm
src/main/cpp/io/hasibix/hasilwgdf/core/render/: Renderer.cpp  Renderer.h  Renderer.mm
